Adds Ruby echo_server for great justice

--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -96,22 +96,22 @@ location /pub {
             push_stream_channels_path               $arg_id;
         }
 
-        #location /pub {
-        #    # activate publisher mode for this location, with admin support
-        #    push_stream_publisher admin;
+        location /pub2 {
+            # activate publisher mode for this location, with admin support
+            push_stream_publisher admin;
 
-        #    # query string based channel id
-        #    push_stream_channels_path               $arg_id;
+            # query string based channel id
+            push_stream_channels_path               $arg_id;
 
-        #    # store messages in memory
-        #    push_stream_store_messages              on;
+            # store messages in memory
+            push_stream_store_messages              on;
 
-        #    # Message size limit
-        #    # client_max_body_size MUST be equal to client_body_buffer_size or
-        #    # you will be sorry.
-        #    client_max_body_size                    32k;
-        #    client_body_buffer_size                 32k;
-        #}
+            # Message size limit
+            # client_max_body_size MUST be equal to client_body_buffer_size or
+            # you will be sorry.
+            client_max_body_size                    32k;
+            client_body_buffer_size                 32k;
+        }
 
         location ~ /sub/(.*) {
             # activate subscriber mode for this location
