--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "nginx_push_stream/nginx-push-stream-module"]
 	path = nginx_push_stream/nginx-push-stream-module
-	url = git@github.com:wandenberg/nginx-push-stream-module.git
+	url = https://github.com/wandenberg/nginx-push-stream-module.git
 [submodule "nginx_push_stream/nginx"]
 	path = nginx_push_stream/nginx
-	url = github.com:nginx/nginx.git
+	url = https://github.com/nginx/nginx.git
