--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -16,8 +16,8 @@ events {
 
 http {
     push_stream_shared_memory_size 32M;
-    #include       mime.types;
-    #default_type  application/octet-stream;
+    include       /usr/local/nginx/conf/mime.types;
+    default_type  application/octet-stream;
 
     #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
     #                  '$status $body_bytes_sent "$http_referer" '
